--- a/frontend/src/component/modal/modals.css
+++ b/frontend/src/component/modal/modals.css
@@ -66,10 +66,9 @@
     font-family: "Rieltor", Arial, sans-serif;
   }
   .modal-content__form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
-    flex-wrap: wrap;
     gap: 20px;
     padding: 10px;
   }
