--- a/frontend/src/component/submitApplication/submitApplication.css
+++ b/frontend/src/component/submitApplication/submitApplication.css
@@ -108,6 +108,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    width: 100%;
     gap: 5px;
   }
   .modal2-content__form_select_p {
@@ -364,6 +365,8 @@ body.modal-open {
 
     .modal2-content__form_nameNumber {
       flex-direction: column;
+      width: 100%;
+      gap: 10px;
     }
 
     .modal2-content__form_name {
