--- a/frontend/src/component/selection/selection.css
+++ b/frontend/src/component/selection/selection.css
@@ -88,6 +88,7 @@
   }
   .selection-content_info_date_buttons_apartamentDay {
     width: 100%;
+    color: black;
     height: 47px;
     background-position: center center;
     border-color: transparent;
