--- a/frontend/src/component/guide/guide.css
+++ b/frontend/src/component/guide/guide.css
@@ -90,10 +90,10 @@
     position: absolute;
     width: 80%;
     height: 80%;
-    padding: 5px;
+    /* padding: 5px; */
   }
   .guide-container__links_link_img_telegram {
-    padding-right: 10px;
+    padding: 0 2px 0 0 !important;
   }
   
   @keyframes pulse {
